root/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
  - web
  routes:
  - match: Host('argocd.local')
    kind: Rule
    priority: 10
    services:
    - name: argocd-server
      port: 80
  - match: Host('argocd.local') && Headers('Content-Type', 'application/grpc')
    kind: Rule
    priority: 11
    services:
    - name: argocd-server
      port: 80
      scheme: h2c
